--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
     "axios": "^1.4.0",
     "path": "^0.12.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1"
   },
   "devDependencies": {
     "@types/node": "^20.4.5",
