--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "mobx": "^6.10.0",
+    "mobx-react-lite": "^4.0.3",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
