--- a/client/package.json
+++ b/client/package.json
@@ -10,11 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/react-calendar": "^4.1.0",
     "axios": "^1.4.0",
     "mobx": "^6.10.0",
     "mobx-react-lite": "^4.0.3",
     "path": "^0.12.7",
     "react": "^18.2.0",
+    "react-calendar": "^4.6.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-loader-spinner": "^5.3.4",
