--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^4.10.1",
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.14.2",
+    "react-toastify": "^9.1.3",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
