--- a/client/package.json
+++ b/client/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "@types/react-calendar": "^4.1.0",
     "axios": "^1.4.0",
+    "date-fns": "^2.30.0",
     "formik": "^2.4.3",
     "mobx": "^6.10.0",
     "mobx-react-lite": "^4.0.3",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-calendar": "^4.6.0",
+    "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-loader-spinner": "^5.3.4",
@@ -29,6 +31,7 @@
   "devDependencies": {
     "@types/node": "^20.4.5",
     "@types/react": "^18.2.15",
+    "@types/react-datepicker": "^4.15.0",
     "@types/react-dom": "^18.2.7",
     "@types/uuid": "^9.0.2",
     "@types/yup": "^0.32.0",
