--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,8 @@
     "@types/react-calendar": "^4.1.0",
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
+    "flowbite": "^1.8.1",
+    "flowbite-react": "^0.5.0",
     "formik": "^2.4.3",
     "mobx": "^6.10.0",
     "mobx-react-lite": "^4.0.3",
