--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -8,5 +8,5 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=talkty.db"
   },
-  "TokenKey": "ASadasdasdlamdakdmadkmalsmdas"
+  "TokenKey": "ASadasdasdlamdakdmadkmalsmasAFKASNFKANFALGKASNGNALK:FNASFKANFSAL:FNAKLANFLAFNAKdas"
 }
