--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Cloudinary": {
+    "CloudName": "arecyus",
+    "ApiKey": "859891146771898",
+    "ApiSecret": "GwXdQCVj1SpNOsmj4pb9MUsMLqo"
+  }
 }
