--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-calendar": "^4.6.0",
     "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-icons": "^4.10.1",
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.14.2",
