--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-icons": "^4.10.1",
+    "react-infinite-scroller": "^1.2.6",
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.14.2",
     "react-toastify": "^9.1.3",
@@ -38,6 +39,7 @@
     "@types/react": "^18.2.15",
     "@types/react-datepicker": "^4.15.0",
     "@types/react-dom": "^18.2.7",
+    "@types/react-infinite-scroller": "^1.2.3",
     "@types/uuid": "^9.0.2",
     "@types/yup": "^0.32.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
